objects/Account.object
<CustomObject>
    <fields>
        <fullName>Alpha_Dev1_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alpha_Dev1_Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerSegment__c</fullName>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tagging__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tagging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>